# ketama

./: .gitignore  README
libketama/: .gitignore  Makefile.in  analyze-test-result.php  configure  configure.ac  ketama.c  ketama_config.h  ketama_test.c
python_ketama/: ketamamodule.c
